# StormRevivalClientSource

./: README.md  RevivedCenteral.slnx
Documentation/: FILE_INDEX.md  README.md
Documentation/00_START_HERE/: START_HERE.md
Documentation/01_Project_Status/: PROJECT_STATUS.md
Documentation/02_Game_Research/: NS1_NARUTO_STORM_1.md  NS2_NARUTO_STORM_2.md  NS3FB_NARUTO_STORM_3_FULL_BURST.md  NS3_NARUTO_STORM_3.md  NS4_NARUTO_STORM_4.md  NSC_NARUTO_STORM_CONNECTIONS.md  NSR_NARUTO_STORM_REVOLUTION.md  SEVEN_PROJECTS_MAP.md
Documentation/03_Framework/: FRAMEWORK_ARCHITECTURE.md
Documentation/04_Steam_Proxy/: STEAM_API_PROXY.md
NarutoStorm1Revived/: CONTRIBUTING.md  NarutoStorm1Revived.slnx  README.md
NarutoStorm2RevivedPrivate/: CONTRIBUTING.md  NarutoStorm2Revived.slnx  README.md
NarutoStorm3FullBurstRevived/: CONTRIBUTING.md  FRAMEWORK_PORT_PLAN.md  NarutoStorm3FullBurstRevived.slnx  README.md
NarutoStorm3Revived/: CONTRIBUTING.md  NarutoStorm3Revived.slnx  README.md
NarutoStorm4Revived/: CONTRIBUTING.md  NarutoStorm4Revived.slnx  README.md
NarutoStorm4Revived/steam_api64/Documents/NS4_GFX_CPP_SDK_Generated/: CMakeLists.txt  README.md
NarutoStorm4Revived/steam_api64/Documents/NS4_GFX_CPP_SDK_Generated/docs/: AdventureWorld.md  BattleHUD.md  CharacterSelect.md  CommonWidgets.md  Misc.md  Online.md  Settings.md  StageSelect.md  System.md
NarutoStormConnectionsRevived/: CONTRIBUTING.md  NarutoStormConnectionsRevived.slnx  README.md
NarutoStormRevolationRevived/: CONTRIBUTING.md  NarutoStormRevolationRevived.slnx  README.md
(+1909 files in other folders)
